--- a/app/src/main/res/layout/shopcart_list.xml
+++ b/app/src/main/res/layout/shopcart_list.xml
@@ -12,15 +12,17 @@
         android:id="@+id/initial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/shape"
         android:gravity="center_horizontal|center_vertical"
         android:textColor="#ffffff"
-        android:background="@drawable/shape"
-        android:layout_marginTop = "10dp"
-        android:layout_marginBottom = "10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/name"
@@ -28,11 +30,11 @@
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/initial"
         android:layout_toRightOf="@id/initial"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:layout_marginLeft="15dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop = "10dp"
-        android:layout_marginBottom = "10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintLeft_toRightOf="@+id/initial"
         app:layout_constraintTop_toTopOf="@+id/initial"
         app:layout_constraintBottom_toBottomOf="@+id/initial" />
@@ -43,10 +45,9 @@
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/initial"
         android:layout_toRightOf="@id/initial"
-        android:textSize="20sp"
-        android:layout_marginRight="50dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginTop = "10dp"
+        android:textSize="18sp"
+        android:layout_marginRight="40dp"
+        android:layout_marginEnd="40dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/name"
         app:layout_constraintBottom_toBottomOf="@+id/name" />
